// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type DateTime renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          disabled={true}
          placeholder=" "
          type="datetime-local"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH cMUUVg"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH iBdanP"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH irkSfR"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          placeholder=" "
          readOnly={true}
          type="datetime-local"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-bndzKH ssA-ds"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-bndzKH fxWDfD"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH hvrYaZ"
          dir="rtl"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-hMtawp hRxnpO"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <input
        className="sc-bndzKH hInqru"
        placeholder="medium"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <input
        className="sc-bndzKH fLhJUV"
        placeholder="large"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH eIBYyS"
          placeholder="xlarge"
          type="datetime-local"
        />
        <label
          className="sc-hMtawp hAnfYh"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH JOpgZ"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH ecRUiK"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi kuLuHP"
      >
        <input
          className="sc-bndzKH buYCCL"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
